style.css
/* Reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    font-size: 16px;
}

a {
    text-decoration: none;
    color: inherit;
}

p {
    line-height: 1.5;
}

strong {
    color: mediumseagreen;
}

header,
section {
    max-width: 80rem;
    margin: 0 auto;
}

/* Global */
body {
    display: flex;
    flex-direction: column;
    gap: 8rem;
    background-color: black;
    color: white;
    padding: 4rem 1rem;
    font-family: Arial, Helvetica, sans-serif;
}

/* Profile */
.profile {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 4rem 0;
    gap: 6rem;
}

.profile__picture {
    flex: 1;
}

.profile__picture-background {
    width: fit-content;
    margin: 0 auto;
    padding: 2rem;
    background-color: mediumseagreen;
    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
    border-radius: 6rem;
}

.profile__picture img {
    display: block;
    margin: 0 auto;
    width: 10rem;
    border-radius: 50%;
}

.profile__info {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    flex: 1;
}

.profile__title {
    color: #fffd;
    margin-bottom: 0.5rem;
    font-size: 4rem;
}

.profile__subtitle {
    color: #fff7;
}

.profile__links-container {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.profile__buttons-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
}

.profile__social-links-wrapper {
    display: flex;
    gap: 1rem;
}

/* Icons */
.icon {
    display: inline-block;
    width: 2rem;
    height: 2rem;
}

/* Subheading */
.subheading {
    text-align: center;
    font-size: 2rem;
    opacity: 0.75;
    margin-bottom: 2rem;
    text-transform: uppercase;
}

/* Buttons */
.button {
    padding: 0.75rem 2rem;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    width: 100%;
}

.button--primary {
    background-color: darkorange;
    color: black;
}

.button--secondary {
    border: 1px solid white;
}


/* Card */
.cards-wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
}

.card {
    display: flex;
    gap: 1.5rem;
    width: 100%;
    background-color: #202127;
    border-radius: 0.5rem;
    padding: 1rem;
    max-width: 22rem;
}

.card--about {
    flex-direction: column;
}

.card--technology {
    align-items: center;
}

.card--project {
    flex-direction: column;
    gap: 1rem;
}

.card__emoji {
    display: block;
    width: fit-content;
    border-radius: 0.25rem;
    background-color: #fff2;
    font-size: 1.5rem;
    padding: 0.5rem;
}

.card__title {
    color: #fffd;
    margin-bottom: 0.25rem;
}

.card__description {
    color: #fff7;
}

.card__arrow {
    font-size: 2rem;
}


/* Responsive - Tablet*/
@media screen and (min-width:500px) {
    .profile__buttons-container {
        flex-direction: row;
    }

    .button {
        width: 12rem;
    }
}

@media screen and (min-width:700px) {
    body {
        padding-inline: 4rem;
    }
}

/* Responsive - Laptop or Desktop */
@media screen and (min-width:1000px) {
    .profile {
        flex-direction: row-reverse;
        align-items: center;
    }

    .profile__info {
        flex: 2;
    }

    .profile__subtitle {
        max-width: 60ch;
    }

    .profile__picture img {
        width: 14rem;
    }

    .profile__picture-background {
        border-radius: 7.25rem;
    }

    .profile .icon:hover {
        transform: scale(1.25);
    }

    .profile__links-container {
        flex-direction: row-reverse;
        flex-wrap: wrap;
        align-items: center;
        justify-content: start;
    }

    .button:hover {
        background-color: white;
    }

    .button--secondary:hover {
        border-color: white;
        color: black;
    }
}

/* Icons */
.gmail-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='none' viewBox='0 0 32 32'%3e%3cpath fill='%23F4F2ED' d='M24.5 0h-17A7.5 7.5 0 0 0 0 7.5v17A7.5 7.5 0 0 0 7.5 32h17a7.5 7.5 0 0 0 7.5-7.5v-17A7.5 7.5 0 0 0 24.5 0Z'/%3e%3cpath fill='%234285F4' d='M5.205 25.38h3.977v-9.66L3.5 11.46v12.215c0 .944.764 1.705 1.705 1.705Z'/%3e%3cpath fill='%2334A853' d='M22.818 25.38h3.977c.944 0 1.705-.764 1.705-1.705V11.46l-5.682 4.262'/%3e%3cpath fill='%23FBBC04' d='M22.818 8.334v7.387L28.5 11.46V9.186c0-2.107-2.406-3.31-4.09-2.045'/%3e%3cpath fill='%23EA4335' d='M9.182 15.72V8.335L16 13.448l6.818-5.114v7.387L16 20.834'/%3e%3cpath fill='%23C5221F' d='M3.5 9.187v2.272l5.682 4.262V8.335L7.59 7.14C5.903 5.877 3.5 7.08 3.5 9.187Z'/%3e%3c/svg%3e");
}
/* ... */

